--- a/bboard/templates/bboard/index.html
+++ b/bboard/templates/bboard/index.html
@@ -6,10 +6,18 @@
 </head>
 <body>
   <h1>Advertisements</h1>
+  <div>
+    <a href="{% url 'index' %}">Main</a>
+    {% for rubric in rubrics %}
+    <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
+    {% endfor %}
+  </div>
   {% for bb in bbs %}
   <div>
     <h2>{{ bb.title }}</h2>
     <p>{{ bb.content }}</p>
+ <!--   <p><a href="/bboard/{{ bb.rubric.pk }}/">{{ bb.rubric.name }}</a></p> -->
+    <p><a href="{% url 'by_rubric' bb.rubric.pk %}">{{ bb.rubric.name }}</a></p>
     <p>{{ bb.published|date:"d.m.Y H:i:s" }}</p>
   </div>
   {% endfor %}
