create BbCreateView and create.html for adding form

--- a/bboard/templates/bboard/by_rubric.html
+++ b/bboard/templates/bboard/by_rubric.html
@@ -9,6 +9,7 @@
   <h2>Rubric: {{ current_rubric.name }}</h2>
   <div>
       <a href="{% url 'index' %}">Main</a>
+      <a href="{% url 'add' %}">Add</a>
       {% for rubric in rubrics %}
       <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
       {% endfor %}
