--- a/bboard/templates/bboard/index.html
+++ b/bboard/templates/bboard/index.html
@@ -8,6 +8,7 @@
   <h1>Advertisements</h1>
   <div>
     <a href="{% url 'index' %}">Main</a>
+    <a href="{% url 'add' %}">Add</a>
     {% for rubric in rubrics %}
     <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
     {% endfor %}
