--- a/bboard/templates/bboard/by_rubric.html
+++ b/bboard/templates/bboard/by_rubric.html
@@ -1,25 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>{{ current_rubric.name }} - Advertisements board</title>
-</head>
-<body>
-  <h1>Advertisements</h1>
-  <h2>Rubric: {{ current_rubric.name }}</h2>
-  <div>
-      <a href="{% url 'index' %}">Main</a>
-      <a href="{% url 'add' %}">Add</a>
-      {% for rubric in rubrics %}
-      <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
-      {% endfor %}
-  </div>
-  {% for bb in bbs %}
-  <div>
+{% extends "layout/basic.html" %}
+
+{% block title %}{{ current_rubric.name }}{% endblock %}
+
+{% block content %}
+<h2>Rubric: {{ current_rubric.name }}</h2>
+{% for bb in bbs %}
+<div>
     <h2>{{ bb.title }}</h2>
     <p>{{ bb.content }}</p>
     <p>{{ bb.published|date:"d.m.Y H:i:s" }}</p>
-  </div>
-  {% endfor %}
-</body>
-</html>
+</div>
+{% endfor %}
+{% endblock %}
