--- a/bboard/templates/bboard/create.html
+++ b/bboard/templates/bboard/create.html
@@ -1,3 +1,16 @@
+{% extends "layout/basic.html" %}
+
+{% block title %}Add advertisement{% endblock %}
+
+{% block content %}
+<h1>Add advertisement</h1>
+<form method="post">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <input type="submit" value="Add">
+</form>
+{% endblock %}
+
 <!DOCTYPE html>
 <html>
 <head>
