--- a/bboard/templates/layout/basic.html
+++ b/bboard/templates/layout/basic.html
@@ -1,7 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" type="text/css" href="{% static 'bboard/style.css' %}">
     <title>{% block title %}Main{% endblock %} - Advertisements board</title>
 </head>
 <body>
