--- a/bboard/templates/bboard/create.html
+++ b/bboard/templates/bboard/create.html
@@ -20,9 +20,9 @@
 <body>
   <h1>Add advertisement</h1>
   <div>
-      <a href="{% url 'index' %}">Main</a>
+      <a href="{% url 'bboard:index' %}">Main</a>
       {% for rubric in rubrics %}
-      <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
+      <a href="{% url 'bboard:by_rubric' rubric.pk %}">{{ rubric.name }}</a>
       {% endfor %}
   </div>
   <form method="post">
