--- a/bboard/templates/bboard/index.html
+++ b/bboard/templates/bboard/index.html
@@ -5,7 +5,7 @@
 <div class="b">
   <h2>{{ bb.title }}</h2>
   <p>{{ bb.content }}</p>
-  <p><a href="{% url 'by_rubric' bb.rubric.pk %}">{{ bb.rubric.name }}</a></p>
+  <p><a href="{% url 'bboard:by_rubric' bb.rubric.pk %}">{{ bb.rubric.name }}</a></p>
   <p>{{ bb.published|date:"d.m.Y H:i:s" }}</p>
 </div>
 {% endfor %}
